devcontainer test hotfix

--- a/.devcontainer/Dockerfile-actual
+++ b/.devcontainer/Dockerfile-actual
@@ -45,7 +45,9 @@ RUN cd /mingw-build/mingw-dwarf2-build \
 
 # llvm: Fetch source and patch. Patch details:
 # * ABI incompatibility fix for llvm-project#58255
-RUN git clone -b main --single-branch "https://github.com/llvm/llvm-project.git" --depth=1 /llvm-build/src \
+## Force llvm 15.0.0 as it is the last version supporting Ubuntu 20.04 officially
+RUN git clone --branch llvmorg-15.0.0 --single-branch \
+        "https://github.com/llvm/llvm-project.git" /llvm-build/src \
     && cd /llvm-build/src \
     && patch -p1 -s < /llvm-build/llvm.patch
 
