--- a/.devcontainer/Dockerfile-actual
+++ b/.devcontainer/Dockerfile-actual
@@ -130,7 +130,7 @@ RUN ln -s /usr/gcc-4.8-clang-toolchain/include/asm-generic /usr/gcc-4.8-clang-to
 # This command "overwrites" those intrinsic defs to Clang's ones instead.
 # See https://clang.llvm.org/compatibility.html#vector_builtins for more description.
 RUN rm /usr/lib/gcc/i686-w64-mingw32/9.4-posix/include/*intrin* \
-    && cp /usr/local/lib/clang/17/include/*intrin* /usr/lib/gcc/i686-w64-mingw32/9.4-posix/include/
+    && cp /usr/local/lib/clang/12.0.0/include/*intrin* /usr/lib/gcc/i686-w64-mingw32/9.4-posix/include/
 
 # Cleanup apt lists from the image
 RUN rm -rf /var/lib/apt/lists/*
