Add save sanitization and improve test save handling
Introduces sanitize_saves.sh to process and repack save files for tests. Updates run_test_darwin.sh to handle saves setup and environment variables for improved automation. Adds a test runner for FTL 1.6.13 Multiverse, refines test save loading logic, and implements UI button click simulation in State. Cleans up and simplifies test utility interfaces and comments.

--- a/tests/.test.env.example
+++ b/tests/.test.env.example
@@ -8,3 +8,7 @@ FTL_DARWIN_1_6_13_DIR="$HOME/Games/FasterThanLight/FTL1.6.13-base.app"
 # FTL 1.6.12 installation directory (darwin/macOS)
 # macOS example: $HOME/Games/FasterThanLight/FTL1.6.12-base.app
 FTL_DARWIN_1_6_12_DIR="$HOME/Games/FasterThanLight/FTL1.6.12-base.app"
+
+
+# FTL 1.6.13 installation with Multiverse mod installed (useful to debug mv bug reports)
+FTL_DARWIN_1_6_13_MV_DIR
