--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -1,9 +1,12 @@
 name: 'Release macOS'
 
 on:
-  push:
-    tags:
-      - 'v*'
+  workflow_call:
+    inputs:
+      version:
+        description: 'Version number (e.g., 1.20.1)'
+        required: true
+        type: string
   workflow_dispatch:
     inputs:
       tag:
@@ -14,21 +17,21 @@ jobs:
   build-macos:
     runs-on: macos-15
     steps:
-      - name: Extract version from tag
+      - name: Extract version
         id: version
         run: |
-          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+          if [ -n "${{ inputs.version }}" ]; then
+            VERSION="${{ inputs.version }}"
+          else
             VERSION="${{ github.event.inputs.tag }}"
             VERSION="${VERSION#v}"
-          else
-            VERSION="${GITHUB_REF#refs/tags/v}"
           fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.tag || github.ref }}
+          ref: v${{ steps.version.outputs.version }}
 
       - name: Setup macOS build environment
         run: buildscripts/ci/setup-macos.sh
